--- a/include/config.h.in
+++ b/include/config.h.in
@@ -9,6 +9,9 @@
 /* define if the Boost::PROGRAM_OPTIONS library is available */
 #undef HAVE_BOOST_PROGRAM_OPTIONS
 
+/* define if the Boost::Python library is available */
+#undef HAVE_BOOST_PYTHON
+
 /* define if the Boost::Regex library is available */
 #undef HAVE_BOOST_REGEX
 
@@ -20,6 +23,9 @@
 
 /* has not libcap */
 #undef HAVE_LIB_PCAP
+
+/* If available, contains the Python version number currently in use. */
+#undef HAVE_PYTHON
 
 /* Define to 1 if stdbool.h conforms to C99. */
 #undef HAVE_STDBOOL_H
