signal handling draft

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,8 @@ AX_BOOST_REGEX
 AX_BOOST_PROGRAM_OPTIONS
 AX_BOOST_IOSTREAMS
 AX_BOOST_PYTHON
+AX_BOOST_ASIO
+AX_BOOST_THREAD
 
 AC_CHECK_FILE(lib/$LIBNIDS/README.original, ,
 [ AC_CHECK_PROG(PATCH, patch, yes, no) 
