--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 AM_CPPFLAGS= $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CPPFLAGS) -I ../include
-LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_PYTHON_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LIBS) ${LDFLAGS}
+LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_PYTHON_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LIBS) ${LDFLAGS} $(BOOST_ASIO_LIB) $(BOOST_THREAD_LIB)
 bin_PROGRAMS = justniffer
+
 
 justniffer_SOURCES =  main.cpp formatter.cpp utilities.cpp regex.cpp
 
