--- a/include/config.h.in
+++ b/include/config.h.in
@@ -3,6 +3,9 @@
 /* define if the Boost library is available */
 #undef HAVE_BOOST
 
+/* define if the Boost::ASIO library is available */
+#undef HAVE_BOOST_ASIO
+
 /* define if the Boost::IOStreams library is available */
 #undef HAVE_BOOST_IOSTREAMS
 
@@ -14,6 +17,9 @@
 
 /* define if the Boost::Regex library is available */
 #undef HAVE_BOOST_REGEX
+
+/* define if the Boost::Thread library is available */
+#undef HAVE_BOOST_THREAD
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
