python integration beta and new Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,9 @@
 FROM ubuntu:24.04
 
 RUN apt-get update -y && \
-    apt-get install -y curl bind9-dnsutils iputils-ping netcat-openbsd iproute2 software-properties-common
-
-RUN add-apt-repository -y ppa:oreste-notelli/ppa && \
-    apt-get update -y && \
-    apt-get install -y justniffer
+    apt-get install -y libboost-python-dev \
+        libboost-regex-dev libboost-program-options-dev libboost-iostreams-dev \
+        libboost-thread-dev libpcap0.8-dev python3-dev python-is-python3 g++ gcc make \
+        dpkg-dev debhelper
 
 CMD [ "tail", "-f", "/dev/null" ]
