--- a/python/justniffer/pyproject.toml
+++ b/python/justniffer/pyproject.toml
@@ -15,6 +15,7 @@ scapy = "^2.6.1"
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.30.0"
 pudb = "^2024.1.3"
+pytest = "^8.3.5"
 
 [build-system]
 requires = ["poetry-core"]
