--- a/python/justniffer/pyproject.toml
+++ b/python/justniffer/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 typer = "^0.15.1"
 loguru = "^0.7.3"
 scapy = "^2.6.1"
+httptools = "^0.6.4"
 
 
 [tool.poetry.group.dev.dependencies]
