--- a/python/justniffer/pyproject.toml
+++ b/python/justniffer/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "justniffer"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
-authors = ["Oreste Notelli <oreste.notelli@gmail.com>"]
+authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
