--- a/docker/Dockerfile.debian
+++ b/docker/Dockerfile.debian
@@ -11,7 +11,7 @@ RUN apt-get update && \
     wget \
     tar \
     devscripts \
-    debhelper libboost-regex-dev libboost-program-options-dev libpcap-dev\
+    debhelper libpcap-dev libboost-regex-dev libboost-program-options-dev libboost-thread-dev\
     libboost-iostreams-dev libboost-python-dev
 
 
@@ -20,7 +20,7 @@ COPY / /workspace/justniffer
 ARG DEBIAN_VERSION
 ENV DEBIAN_VERSION=${DEBIAN_VERSION}
 
-RUN /workspace/justniffer/docker/replace-version.sh
+RUN /workspace/justniffer/replace-version.sh
 RUN cd /workspace/justniffer && dpkg-buildpackage -d
 
 
