--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: justniffer
 Section: net
 Priority: optional
 Maintainer: Oreste Notelli <oreste.notelli@plecno.com>
-Build-Depends: patch, tar (>=1), debhelper (>= 5), autotools-dev, make(>=2), g++(>=3.3), libboost-iostreams-dev,  libboost-program-options-dev , libboost-regex-dev ,libboost-thread-dev, libc6-dev (>=2), gcc (>= 3.3), bash-completion, libpcap0.8-dev 
+Build-Depends: patch, tar (>=1), debhelper (>= 5), autotools-dev, make(>=2), g++(>=3.3), libboost-iostreams-dev,  libboost-program-options-dev , libboost-python-dev, libboost-regex-dev ,libboost-thread-dev, libc6-dev (>=2), gcc (>= 3.3), bash-completion, libpcap0.8-dev, python3-dev, python-is-python3 
 Standards-Version: 3.9.2
 
 Package: justniffer
 Homepage: https://onotelli.github.io/justniffer/
 Architecture: any
-Depends: ${shlibs:Depends}, bash-completion, python3, python3-scapy, python3-loguru
+Depends: ${shlibs:Depends}, bash-completion, python3
 Description: tcp packet sniffer. It can log network traffic in 
  a 'standard' (web server like) or in a customized way. It can also log response 
  times, useful for tracking network services performances (e.g. web server, 
