python project packaging draft

--- a/main/debian/rules
+++ b/main/debian/rules
@@ -50,7 +50,7 @@ clean:
 	# Add here commands to clean up after the build process.
 	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -f config.sub config.guess
-
+	
 	dh_clean 
 
 install: build
@@ -74,7 +74,7 @@ binary-arch: build install
 	dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installexamples
-#	dh_install
+	dh_install
 #	dh_installmenu
 #	dh_installdebconf	
 #	dh_installlogrotate
