--- a/main/debian/control
+++ b/main/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.2
 Package: justniffer
 Homepage: https://onotelli.github.io/justniffer/
 Architecture: any
-Depends: ${shlibs:Depends}, bash-completion, python3
+Depends: ${shlibs:Depends}, bash-completion, python3, python3-venv
 Description: tcp packet sniffer. It can log network traffic in 
  a 'standard' (web server like) or in a customized way. It can also log response 
  times, useful for tracking network services performances (e.g. web server, 
