--- a/python/justniffer-cli/pyproject.toml
+++ b/python/justniffer-cli/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "justniffer"
-version = "0.2.0a1"
+name = "justniffer-cli"
+version = "0.2.0a3"
 description = ""
 authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
 readme = "README.md"
+packages = [{include = "justniffer"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -24,6 +25,9 @@ psutil = "^7.0.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
 
 [tool.poetry.scripts]
 justniffer-cli = "justniffer.cli:main"
+
