Refactor justniffer-cli: update formatter handling, enhance plugin management, and clean up code

--- a/python/justniffer-cli/example-config.yml
+++ b/python/justniffer-cli/example-config.yml
@@ -18,6 +18,6 @@ extractors:
   - ConnectionDuration
   - RequestSize
   - ResponseSize
-  - test_extractors.tests:TestExtractor
+  #- test_extractors.tests:TestExtractor
   - ProtocolSelector
 formatter: str
