--- a/python/justniffer-cli/pyproject.toml
+++ b/python/justniffer-cli/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "justniffer-cli"
-version = "0.2.0"
-description = ""
+version = "0.2.0a5"
+description = "A Python-based command-line interface (CLI) for interacting with [justniffer] (https://github.com/onotelli/justniffer)."
 authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
 readme = "README.md"
 packages = [{include = "justniffer"}]
