python docs updated

--- a/python/justniffer-cli/example-config.yml
+++ b/python/justniffer-cli/example-config.yml
@@ -19,6 +19,7 @@ extractors:
   RequestSize:
   ResponseSize:
   ProtocolSelector:
+  test_extractors.tests:TestExtractor:
 formatter: 
   str:
     sep: ' '
