fixes for gcc 4:14.2.0-1

--- a/docker/Dockerfile.debian
+++ b/docker/Dockerfile.debian
@@ -18,7 +18,7 @@ ARG DEBIAN_VERSION
 ENV DEBIAN_VERSION=${DEBIAN_VERSION}
 
 RUN cd /workspace/main; \
-    DEBIAN_VERSION=${DEBIAN_VERSION} ./replace-version.sh; \
+    DEBIAN_VERSION=${DEBIAN_VERSION} ./replace-version.py; \
     dpkg-buildpackage -d
 
 
