build script refactoring

--- a/docker/Dockerfile.debian
+++ b/docker/Dockerfile.debian
@@ -1,5 +1,6 @@
 ARG DEBIAN_VERSION=bookworm
-ARG BASE_IMAGE=debian:${DEBIAN_VERSION}
+ARG DISTRO=debian
+ARG BASE_IMAGE=${DISTRO}:${DEBIAN_VERSION}
 ARG PYTHON_VERSION
 
 FROM ${BASE_IMAGE} AS dev_env
