--- a/docker/build
+++ b/docker/build
@@ -9,30 +9,35 @@ DISTRO_VERSIONS = {
     'debian': ['trixie', 'bookworm']
 }
 
-for distro, versions in DISTRO_VERSIONS.items():
-    logging.info(f'Processing {distro}...')
-    
-    for version in versions:
-        logging.info(f'  Building for {distro} {version}...')
-        logging.info(f'Building Docker image for {distro} {version}...')
-        
-        subprocess.run([
-            'docker', 'build',
-            '--build-arg', f'DEBIAN_VERSION={version}',
-            '--build-arg', f'DISTRO={distro}',
-            '-f', 'Dockerfile.debian',
-            '..',
-            '-t', f'{distro}-justniffer-{version}'
-        ], check=True)
-        
-        logging.info(f'Running container for {distro} {version}...')
-        
-        subprocess.run([
-            'docker', 'run', '-it', '--rm',
-            '-v', f'{subprocess.run(["pwd"], capture_output=True, text=True).stdout.strip()}:/mnt',
-            f'{distro}-justniffer-{version}',
-            '/bin/bash', '-c', 'cp /workspace/*.deb /mnt/ && ls -l /mnt/'
-        ], check=True)
-        
-        logging.info(f'Finished processing {distro} {version}!')
 
+def build() -> None:
+    for distro, versions in DISTRO_VERSIONS.items():
+        logging.info(f'Processing {distro}...')
+
+        for version in versions:
+            logging.info(f'  Building for {distro} {version}...')
+            logging.info(f'Building Docker image for {distro} {version}...')
+
+            subprocess.run([
+                'docker', 'build',
+                '--build-arg', f'DEBIAN_VERSION={version}',
+                '--build-arg', f'DISTRO={distro}',
+                '-f', 'Dockerfile.debian',
+                '..',
+                '-t', f'{distro}-justniffer-{version}'
+            ], check=True)
+
+            logging.info(f'Running container for {distro} {version}...')
+
+            subprocess.run([
+                'docker', 'run', '-it', '--rm',
+                '-v', f'{subprocess.run(["pwd"], capture_output=True, text=True).stdout.strip()}:/mnt',
+                f'{distro}-justniffer-{version}',
+                '/bin/bash', '-c', 'cp /workspace/*.deb /mnt/ && ls -l /mnt/'
+            ], check=True)
+
+            logging.info(f'Finished processing {distro} {version}!')
+
+
+if __name__ == '__main__':
+    build()
