--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -2,9 +2,11 @@ ARG BASE_IMAGE=ubuntu:24.04
 
 FROM ${BASE_IMAGE} AS dev_env
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update -y &&  apt install -y wget && \
-    wget https://github.com/onotelli/justniffer/releases/download/v0.6.7/justniffer_0.6.7.noble_amd64.deb 
-RUN apt install -y ./justniffer_0.6.7.noble_amd64.deb 
-    
+
+RUN apt-get update -y && apt install -y wget 
+
+ARG JUSTNIFFER_DEB=justniffer_0.6.8-dev.3.noble_amd64.deb
+RUN wget https://github.com/onotelli/justniffer/releases/download/dev/${JUSTNIFFER_DEB} 
+RUN apt install -y ./${JUSTNIFFER_DEB} 
 
 CMD [ "tail", "-f", "/dev/null" ]
