--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ autom4te.cache
 /justniffer*.buildinfo
 /justniffer*.dsc
 /justniffer*.tar.xz
+/justniffer*.tar.gz
 /justniffer*.upload
 /.env
 /tmp
