--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -5,8 +5,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && apt install -y wget 
 
-ARG JUSTNIFFER_DEB=justniffer_0.6.8-dev.3.noble_amd64.deb
-RUN wget https://github.com/onotelli/justniffer/releases/download/dev/${JUSTNIFFER_DEB} 
+ARG JUSTNIFFER_DEB=justniffer_0.6.8.noble_amd64.deb
+RUN wget https://github.com/onotelli/justniffer/releases/download/v0.6.8/${JUSTNIFFER_DEB}
 RUN apt install -y ./${JUSTNIFFER_DEB} 
 
 CMD [ "tail", "-f", "/dev/null" ]
