--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -8,6 +8,6 @@ RUN apt-get update -y && apt install -y wget
 ARG JUSTNIFFER_VERSION=0.6.10
 ARG JUSTNIFFER_DEB=justniffer_${JUSTNIFFER_VERSION}.noble_amd64.deb
 RUN wget https://github.com/onotelli/justniffer/releases/download/v${JUSTNIFFER_VERSION}/${JUSTNIFFER_DEB}
-RUN apt install -y ./${JUSTNIFFER_DEB} 
+RUN apt update -y && apt install -y ./${JUSTNIFFER_DEB} 
 
 CMD [ "tail", "-f", "/dev/null" ]
