--- a/python/justniffer-cli/pyproject.toml
+++ b/python/justniffer-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "justniffer-cli"
-version = "0.2.2"
+version = "0.2.4"
 description = "A Python-based command-line interface (CLI) for interacting with [justniffer] (https://github.com/onotelli/justniffer)."
 authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
 readme = "README.md"
@@ -15,6 +15,7 @@ httptools = "^0.6.4"
 dynaconf = "^3.2.11"
 pydantic = "^2.11.4"
 pyyaml = "^6.0.2"
+packaging = "^25.0"
 
 
 [tool.poetry.group.dev.dependencies]
